--- a/Advocacia Site/my-app/package.json
+++ b/Advocacia Site/my-app/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/react-helmet": "^6.1.11",
     "css-loader": "^7.1.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^9.1.0",
